# sparse_attn

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  README_ZH.md  pyproject.toml  requirements.txt
config/: xattn_config.json
docs/: index.md
examples/: basic_usage.py  model_inference.py
sparseattn/: __init__.py  arguments.py
sparseattn/eval/: data.py  eval.py  eval_alce.py  locret_cache.py  utils.py
sparseattn/eval/configs/: cite.yaml  icl.yaml  niah.yaml  sub_icl.yaml
sparseattn/eval/longproc_addon/: longproc_helmet_loader.py
sparseattn/eval/run_scripts/: baseline.sh  flexprefill.sh  run_duo.sh  run_duo_32k.sh  run_prulong.sh  run_prulong_32k.sh  run_prulong_32k_subtask.sh  run_realmetrics_pruduo.sh  xattention.sh
sparseattn/run_scripts/: prulong_masksonly.sh  prulong_masksonly_debug.sh  prulong_masksonly_phi.sh  prulong_masksonly_qwen.sh  prulong_masksonly_qwen_debug.sh
sparseattn/src/: Flexprefill.py  Fullprefill.py  Minference.py  Xattention.py  __init__.py  duoattention.py  load_llama.py  model_utils.py  utils.py
sparseattn/threshold/: __init__.py  llama_thrshold.py
sparseattn/training/: __init__.py  attention_mask.py  dataset.py  dataset_batch.py  distributed_attention.py  lh_train_language_model.py  lh_trainer.py  lh_trainer_nsa.py  modeling_flash_llama.py  modeling_flash_phi.py  modeling_flash_qwen.py  save_prulong_masks.py  script_arguments.py
sparseattn/utils/: concat_training_data.py
tests/: test_attn_focus.py  test_footprint.py  test_infer.py  test_layerdecay.py  test_layerheatmap.py  test_sparseattn.py  test_swanlab.py
(+24 files in other folders)
